# Checkpoint-maker

./: CMakeLists.txt
lib/: debug.h  events.h  main.h  run.h  window.h
src/: debug.c  events.c  main.c  run.c  window.c
